# pretix-organizer-email-templates

./: .gitignore  LICENSE  MANIFEST.in  README.rst  RELEASE_CHECKLIST.md  pretixplugin.toml  pyproject.toml
pretix_organizeremailtemplates/: __init__.py  apps.py  forms.py  signals.py  urls.py  views.py
pretix_organizeremailtemplates/templates/pretix_organizeremailtemplates/: event_settings.html  organizer_settings.html
